feat: add get duration media stream
