# docs/swagger.json
@@ -324,12 +324,6 @@
                         "in": "formData"
                     },
                     {
-                        "type": "integer",
-                        "description": "Duration in seconds",
-                        "name": "duration",
-                        "in": "formData"
-                    },
-                    {
                         "type": "boolean",
                         "description": "Is public (true/false)",
                         "name": "is_public",
